--- a/pom.xml
+++ b/pom.xml
@@ -6,52 +6,55 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>vavi</groupId>
-  <artifactId>vavi-crypt-sandbox</artifactId>
-  <name>Vavi Crypt API</name>
+  <artifactId>vavi-crypto-sandbox</artifactId>
+  <name>Vavi Crypto API</name>
   <organization>
     <name></name>
   </organization>
   <version>1.0.0</version>
-  <url>http://www.vavisoft.com/</url>
+  <url>https://github.com/umjammer/vavi-crypto-sandbox</url>
   <description></description>
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-          <encoding>Windows-31J</encoding>
-          <compilerVersion>1.5</compilerVersion>
-          <executable>${JAVA_HOME}/bin/java</executable>
+          <source>1.8</source>
+          <target>1.8</target>
+          <encoding>utf-8</encoding>
         </configuration>
       </plugin>
     </plugins>
   </build>
   <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
   </repositories>
   <dependencies>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.5</version>
-  		<type>jar</type>
-  		<scope>test</scope>
-  		<optional>false</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>javassist</groupId>
-  		<artifactId>javassist</artifactId>
-  		<version>3.8.0.GA</version>
-  		<type>jar</type>
-  		<optional>false</optional>
-  	</dependency>
-  	<dependency>
-  		<groupId>vavi</groupId>
-  		<artifactId>vavi-commons</artifactId>
-  		<version>1.0.0</version>
-  		<type>jar</type>
-  		<optional>false</optional>
-  	</dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.8.0.GA</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.umjammer</groupId>
+      <artifactId>vavi-commons</artifactId>
+      <version>1.0.6</version>
+    </dependency>
   </dependencies>
+  <scm>
+    <url>https://github.com/umjammer/vavi-crypto-sandbox</url>
+  </scm>
+  <issueManagement>
+    <url>https://github.com/umjammer/vavi-crypto-sandbox/issues</url>
+  </issueManagement>
 </project>
