--- a/src/test/resources/GenericInstrumentation.properties
+++ b/src/test/resources/GenericInstrumentation.properties
@@ -1,5 +1,5 @@
 #
-#
+# list transformers
 #
 
-classFileTransformer.1=PropertiesClassFileTransformer
+classFileTransformer.1=instr.PropertiesClassFileTransformer
