--- a/src/test/resources/PropertiesClassFileTransformer.properties
+++ b/src/test/resources/PropertiesClassFileTransformer.properties
@@ -1,12 +1,17 @@
 #
-# Properties for GenericInstrumentation
-#
-# Written by Naohide Sano
+# wow! jce's security check is ignored!
+# your signless provider works!
 #
 
+#
 # regex matching
-class=(msrsatest)|(t113_2)
+#
+class=javax\.crypto\.JceSecurity
+#
 # equals matching
-method=main
-# 
-instruction={ PropertiesSecurityProviderAdder.exec(); }
+#
+method=getVerificationResult
+#
+# javassist code
+#
+instruction={ return null; }
