--- a/src/test/resources/PropertiesSecurityProviderAdder.properties
+++ b/src/test/resources/PropertiesSecurityProviderAdder.properties
@@ -1,9 +1,9 @@
 #
-#
+# not used, my purpose is accomplished by PropertiesClassFileTransformer
 #
 
 #
-#
+# providers
 #
 security.provider.1=com.boyter.mscrypto.MSKeyManagerProvider
 security.provider.2=com.boyter.mscrypto.MSTrustManagerProvider
