--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,97 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>vavi</groupId>
   <artifactId>vavi-crypto-sandbox</artifactId>
+  <version>1.0.1</version>
+
   <name>Vavi Crypto API</name>
   <organization>
-    <name></name>
+    <name>vavi</name>
   </organization>
-  <version>1.0.0</version>
   <url>https://github.com/umjammer/vavi-crypto-sandbox</url>
   <description></description>
+  <scm>
+    <url>https://github.com/umjammer/vavi-crypto-sandbox</url>
+  </scm>
+  <issueManagement>
+    <url>https://github.com/umjammer/vavi-crypto-sandbox/issues</url>
+  </issueManagement>
+
+  <properties>
+    <rococoa.version>0.8.4</rococoa.version>
+  </properties>
+
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/umjammer/vavi-crypto-sandbox</url>
+    </repository>
+  </distributionManagement>
+
+  <profiles>
+    <profile>
+      <id>windows</id>
+      <activation>
+        <os>
+          <family>windows</family>
+        </os>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+            <extensions>true</extensions>
+            <configuration>
+              <javahClassNames>
+                <javahClassName>com.boyter.mscrypto.MSCryptoManager</javahClassName>
+              </javahClassNames>
+              <javahSearchJNIFromDependencies>false</javahSearchJNIFromDependencies>
+              <javahOS>darwin</javahOS>
+              <compilerProvider>generic-classic</compilerProvider>
+              <compilerStartOptions>
+                <compilerStartOption>-g -Wall -O2 -fomit-frame-pointer -fPIC</compilerStartOption>
+                <compilerStartOption>
+                  -I/usr/local/include
+                </compilerStartOption>
+              </compilerStartOptions>
+              <sources>
+                <source>
+                  <directory>src/main/native/</directory>
+                  <fileNames>
+                    <fileName>mscrypt.c</fileName>
+                  </fileNames>
+                </source>
+              </sources>
+              <linkerStartOptions>
+                <linkerStartOption>-dynamiclib -arch x86_64
+                  -L/usr/local/lib
+                </linkerStartOption>
+              </linkerStartOptions>
+              <linkerFinalName></linkerFinalName>
+              <linkerEndOptions>
+                <linkerEndOption>-o ${project.build.directory}/mscrypto.dll</linkerEndOption>
+              </linkerEndOptions>
+            </configuration>
+            <executions>
+              <execution>
+                <id>javah</id>
+                <phase>compile</phase>
+                <goals>
+                  <goal>javah</goal>
+                  <goal>compile</goal>
+                  <goal>link</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
   <build>
     <plugins>
       <plugin>
@@ -168,6 +250,22 @@
       <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-commons</artifactId>
       <version>1.1.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.rococoa</groupId>
+      <artifactId>rococoa-contrib</artifactId>
+      <version>${rococoa.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.rococoa</groupId>
+      <artifactId>rococoa-core</artifactId>
+      <version>${rococoa.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>jna-platform</artifactId>
+      <version>5.9.0</version>
     </dependency>
 
     <dependency>
