--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,14 @@
 
   <groupId>vavi</groupId>
   <artifactId>vavi-crypto-sandbox</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
 
   <name>Vavi Crypto API</name>
   <organization>
     <name>vavi</name>
   </organization>
   <url>https://github.com/umjammer/vavi-crypto-sandbox</url>
-  <description></description>
+  <description>Crypto API</description>
   <scm>
     <url>https://github.com/umjammer/vavi-crypto-sandbox</url>
   </scm>
@@ -24,7 +24,7 @@
   </issueManagement>
 
   <properties>
-    <rococoa.version>0.8.4</rococoa.version>
+    <rococoa.version>0.8.5-SNAPSHOT</rococoa.version>
   </properties>
 
   <distributionManagement>
@@ -47,6 +47,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>native-maven-plugin</artifactId>
+            <version>1.0-alpha-11</version>
             <extensions>true</extensions>
             <configuration>
               <javahClassNames>
@@ -74,7 +75,7 @@
                   -L/usr/local/lib
                 </linkerStartOption>
               </linkerStartOptions>
-              <linkerFinalName></linkerFinalName>
+              <linkerFinalName/>
               <linkerEndOptions>
                 <linkerEndOption>-o ${project.build.directory}/mscrypto.dll</linkerEndOption>
               </linkerEndOptions>
@@ -99,7 +100,9 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
@@ -110,7 +113,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.8</version>
+        <version>3.1.0</version>
         <executions>
           <execution>
             <id>instrumentation</id>
@@ -127,7 +130,7 @@
                     <include name="Generic*.properties" />
                     <include name="Properties*.properties" />
                   </fileset>
-                  <zipfileset src="${maven.dependency.org.javassist.javassist.jar.path}"
+                  <zipfileset src="${org.javassist:javassist:jar}"
                               excludes="META-INF/**"/>
                 </jar>
               </target>
@@ -176,8 +179,9 @@
       </plugin>
 
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.10</version>
+        <version>3.3.0</version>
         <executions>
           <execution>
             <id>copy</id>
@@ -209,7 +213,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M5</version>
+        <version>3.0.0-M7</version>
         <configuration>
           <argLine>
             -javaagent:${project.build.directory}/gi.jar
@@ -228,7 +232,6 @@
     </repository>
     <repository>
       <id>github</id>
-      <name>GitHub umjammer Apache Maven Packages</name>
       <url>https://maven.pkg.github.com/umjammer/*</url>
     </repository>
   </repositories>
@@ -238,7 +241,7 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.8.1</version>
+        <version>5.8.2</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -265,7 +268,7 @@
     <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna-platform</artifactId>
-      <version>5.9.0</version>
+      <version>5.12.1</version>
     </dependency>
 
     <dependency>
