--- a/pom.xml
+++ b/pom.xml
@@ -241,7 +241,7 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.8.2</version>
+        <version>5.9.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -252,7 +252,7 @@
     <dependency>
       <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-commons</artifactId>
-      <version>1.1.6</version>
+      <version>1.1.7</version>
     </dependency>
 
     <dependency>
@@ -295,7 +295,7 @@
     <dependency>
       <groupId>org.javassist</groupId>
       <artifactId>javassist</artifactId>
-      <version>3.23.0-GA</version>
+      <version>3.23.1-GA</version> <!-- 3.24.0-GA ~ for java11 -->
       <scope>test</scope>
     </dependency>
   </dependencies>
