--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -4,3 +4,6 @@ java.util.logging.ConsoleHandler.level=ALL
 java.util.logging.ConsoleHandler.formatter=vavi.util.logging.VaviFormatter
 
 #org.rococoa.level=ALL
+jpcsp.crypto.level=ALL
+libkirk.level=ALL
+vavi.util.level=FINE
